[package]
name = "woongdle"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [ "Kang Hyunwoong hyunwoong.kang@leedotype.com" ]
description = "Wordle implemented in Rust as a CLI"
homepage = "https://github.com/hwoongkang/woongdle"
repository = "https://github.com/hwoongkang/woongdle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion	="*"
regex	="1"
rand	="*"